Prevent scrolling when swiping drawers around, add some gentle opacity shifts to the drawers

--- a/res/style/drawer.css
+++ b/res/style/drawer.css
@@ -1,6 +1,7 @@
 @media screen and (min-width: 1024px) {
 	div.drawer {
 		display:inline-block;
+		opacity: 1;
 		position: static;
 		box-shadow:0 0 4px -2px rgba(0,0,0,0.5);
 		flex-grow:1;
@@ -35,6 +36,7 @@ body {
 	height: 100%;
 	width: 100%;
 	overflow-y: auto;
+	overflow-x: hidden;
 }
 body, input {
 	font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT",
@@ -75,13 +77,14 @@ header h1 {
 .drawer {
 	height: 100%;
 	width: 90%;
+ 	opacity: 0.75;
 	max-width:320px;
 	position: absolute;
 	top: 0;
 	background: #fff;
 	color:#333;
 	z-index: 100;
-	transition: transform 0.5s;
+	transition: all 0.5s;
 }
 .drawer[data-slide-in-dir="right"] {
 	transform: translateX(-100%);
@@ -96,6 +99,7 @@ header h1 {
 	color:#555;
 }
 .drawer.visible {
+	opacity: 1;
 	box-shadow:0 0 4px rgba(0,0,0,0.5);
 	transform: translateX(0);
 }
